tests/query_errors/node_reserved_name_script/error.txt
Error: 
    3 |   event
    4 | end;
    5 | create script out;
      | ^^^^^^^^^^^^^^^^^ Name `out` is reserved for built-in nodes, please use another name.
    6 | 
    7 | select event from in into metrics;